Add complete benchmark suite for Chengis vs Jenkins performance comparison
Three benchmark types: overhead (echo hello x N measuring framework cost),
realistic (multi-stage clone+build+test pipeline), and throughput (concurrent
builds at 1/2/4/8/16 threads). Includes Clojure harness with statistical
analysis, Jenkins comparison scripts via REST API, and side-by-side report
generator. Run with: lein with-profile bench run

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>